kube/2048.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2048
spec:
  selector:
    matchLabels:
      app: app2048
  replicas: 1
  template:
    metadata:
      labels:
        app: app2048
    spec:
      containers:
      - name: app2048
        image: kelog/2048:latest
        ports:
        - containerPort: 2048
        - containerPort: 8080
        resources:
          limits:
            memory: "100Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 480
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 480
---
apiVersion: v1
kind: Service
metadata:
  name: app2048
spec:
  ports:
  - port: 8080
    name: info-page
    protocol: TCP
  - port: 2048
    targetPort: 2048
    nodePort: 32094
    protocol: TCP
    name: game
  type: NodePort
  selector:
    app: app2048
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app2048
spec:
  rules:
  - host: 2048.kelog.pl
    http:
      paths:
      - path:
        backend:
          serviceName: app2048
          servicePort: 8080
