kube/facerec.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facerecapp
spec:
  selector:
    matchLabels:
      app: facerecapp
  replicas: 1
  template:
    metadata:
      labels:
        app: facerecapp
    spec:
      containers:
      - name: facerecapp
        image: kelog/facerec:latest
        resources:
          limits:
            memory: "150Mi"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 240
---
apiVersion: v1
kind: Service
metadata:
  name: facerecapp
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: facerecapp
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: facerecapp
spec:
  tls:
  - hosts:
    - facerec.kelog.pl
    secretName: facerec-cert
  rules:
  - host: facerec.kelog.pl
    http:
      paths:
      - path:
        backend:
          serviceName: facerecapp
          servicePort: 8080
